Precisei atualizar o django por causa do input mask do django

--- a/projeto/cliente/templates/cliente_form.html
+++ b/projeto/cliente/templates/cliente_form.html
@@ -26,9 +26,27 @@
      background-color: rgb(255, 255, 255);
      width:: 300px;
      height: 500px;
-     border: solid 1px black;
+     /*border: solid 1px black;*/
     }
-   </style>
+    .button {
+        background-color: rgb(46, 129, 83); 
+        border: none;
+        color: white;
+        padding: 15px 52px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+    }
+      
+    .button1 {border-radius: 8px;}
+    .button2 {border-radius: 4px;}
+    .button3 {border-radius: 8px;}
+    .button4 {border-radius: 12px;}
+    .button5 {border-radius: 50%;}
+</style>
 
    <!-- https://www.schoolofnet.com/forum/topico/como-enviar-a-mensagem-de-sucesso-ou-erro-para-o-formulario-8495 -->
 
@@ -36,7 +54,9 @@
 
         <div class="f" id="tela1">
             <form method="POST">
-            {% csrf_token %}        
+            {% csrf_token %}    
+            
+            <h2>CADASTRO PESSOAL</h2>
             <div class="row">
                 <div class="col-sm-4">                    
                     <div class="form-group" >                
@@ -44,13 +64,95 @@
                         {% render_field form.nome class="form-control" %}
                     </div>
                 </div>
-                <div class="col-sm-8"> 
+                <div class="col-sm-3">                    
+                    <div class="form-group" >                
+                        <label for="" class="required" >{{form.cpf.label}} </label>        
+                        {% render_field form.cpf class="form-control" %}
+                    </div>
+                </div>
+                <div class="col-sm-3">                    
+                    <div class="form-group" >                
+                        <label for="" class="required" >{{form.rg.label}} </label>        
+                        {% render_field form.rg class="form-control" %}
+                    </div>
+                </div>
+                <div class="col-sm-4">                    
+                    <div class="form-group" >                
+                        <label for="" >{{form.nome_da_mae.label}} </label>        
+                        {% render_field form.nome_da_mae class="form-control" %}
+                    </div>
+                </div>
+                <div class="col-sm-4">                    
+                    <div class="form-group" >                
+                        <label for="" >{{form.nome_do_pai.label}} </label>        
+                        {% render_field form.nome_do_pai class="form-control" %}
+                    </div>
+                </div>
+                <div class="col-sm-4"> 
                     <div class="form-group">
-                        <label for="">{{form.endereco.label}}</label>
-                        {% render_field form.endereco class="form-control" %}                       
+                        <label for="">{{form.data_nasc.label}}</label>
+                        {% render_field form.data_nasc class="form-control" type="date"%}                       
+                    </div>
+                </div>
+            </div> 
+            <h2>Endereço</h2>
+            <div class="row">
+                <div class="col-sm-4">                    
+                    <div class="form-group" >                
+                        <label for="" >{{form.rua.label}} </label>        
+                        {% render_field form.rua class="form-control" %}
+                    </div>
+                </div>
+                <div class="col-sm-2">                    
+                    <div class="form-group" >                
+                        <label for="" >{{form.numero_casa.label}} </label>        
+                        {% render_field form.numero_casa class="form-control" %}
+                    </div>
+                </div>
+                <div class="col-sm-3">                    
+                    <div class="form-group" >                
+                        <label for="" >{{form.bairro.label}} </label>        
+                        {% render_field form.bairro class="form-control" %}
+                    </div>
+                </div>
+                <div class="col-sm-3">                    
+                    <div class="form-group" >                
+                        <label for="" >{{form.cep.label}} </label>        
+                        {% render_field form.cep class="form-control" %}
+                    </div>
+                </div>
+                <div class="col-sm-4">                    
+                    <div class="form-group" >                
+                        <label for="" >{{form.ponto_referencia.label}} </label>        
+                        {% render_field form.ponto_referencia class="form-control" %}
+                    </div>
+                </div>
+                <div class="col-sm-2">                    
+                    <div class="form-group" >                
+                        <label for="" >{{form.contato1.label}} </label>        
+                        {% render_field form.contato1 class="form-control" %}
+                    </div>
+                </div>
+                <div class="col-sm-2">                    
+                    <div class="form-group" >                
+                        <label for="" >{{form.contato2.label}} </label>        
+                        {% render_field form.contato2 class="form-control" %}
+                    </div>
+                </div>
+                <div class="col-sm-2">                    
+                    <div class="form-group" >                
+                        <label for="" >{{form.celular1.label}} </label>        
+                        {% render_field form.celular1 class="form-control" %}
+                    </div>
+                </div>
+                <div class="col-sm-2">                    
+                    <div class="form-group" >                
+                        <label for="" >{{form.celular2.label}} </label>        
+                        {% render_field form.celular2 class="form-control" %}
                     </div>
                 </div>
             </div>    
+            
         </div>
 
         <div class="f" id="tela2">
@@ -108,9 +210,9 @@
     </div>
 
     <nav id="menu">
-        <button id="tela1">B1</button>
-        <button id="tela2">B2</button>
-        <button id="tela3">B3</button>
+        <button class="button button1" id="tela1">Cadastro Pessoal</button>
+        <button class="button button1" id="tela2">Dados do Local de Trabalho </button>
+        <button class="button button1" id="tela3">Dados Bancários</button>
     </nav>
 
    <script>
