--- a/projeto/core/templates/base.html
+++ b/projeto/core/templates/base.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="https://www.djangoproject.com/favicon.ico">
 
     
-    <title>Estoque</title>
+    <title>ESCTOP - SISTEMA</title>
     
 
     <!-- Bootstrap CSS -->
