--- a/projeto/cliente/templates/cliente_form.html
+++ b/projeto/cliente/templates/cliente_form.html
@@ -19,6 +19,8 @@
     </style>
 {% endblock css %}
 
+{% block js %}{% endblock js %}
+
 {% block content %}
 
 <style>
@@ -51,29 +53,35 @@
    <!-- https://www.schoolofnet.com/forum/topico/como-enviar-a-mensagem-de-sucesso-ou-erro-para-o-formulario-8495 -->
 
     <div id="all">
-
         <div class="f" id="tela1">
+
             <form method="POST">
             {% csrf_token %}    
             
             <h2>CADASTRO PESSOAL</h2>
             <div class="row">
-                <div class="col-sm-6">                    
+                <div class="col-sm-5">                    
                     <div class="form-group" >                
                         <label for="" class="required" >{{form.nome.label}} </label>        
                         {% render_field form.nome class="form-control" %}
                     </div>
                 </div>
-                <div class="col-sm-3">                    
+                <div class="col-sm-2">                    
                     <div class="form-group" >                
                         <label for="" class="required" >{{form.cpf.label}} </label>        
-                        {% render_field form.cpf class="form-control" %}
+                        {% render_field form.cpf class="form-control cpf-mask" type="text" %}
                     </div>
                 </div>
-                <div class="col-sm-3">                    
+                <div class="col-sm-2">                    
                     <div class="form-group" >                
                         <label for="" class="required" >{{form.rg.label}} </label>        
                         {% render_field form.rg class="form-control" %}
+                    </div>
+                </div>
+                <div class="col-sm-3"> 
+                    <div class="form-group">
+                        <label for="">{{form.data_nasc.label}}</label>
+                        {% render_field form.data_nasc class="form-control " type="date"%}                       
                     </div>
                 </div>
                 <div class="col-sm-4">                    
@@ -88,12 +96,7 @@
                         {% render_field form.nome_do_pai class="form-control" %}
                     </div>
                 </div>
-                <div class="col-sm-4"> 
-                    <div class="form-group">
-                        <label for="">{{form.data_nasc.label}}</label>
-                        {% render_field form.data_nasc class="form-control" type="date"%}                       
-                    </div>
-                </div>
+                
             </div> 
             <h2>Endereço</h2>
             <div class="row">
@@ -165,13 +168,7 @@
                 </div>
         
                 <!-- class="errorlist"><li>This field is required.</li></ul><select id="user" name="user" required -->
-        
-                <div class="col-sm-4" >
-                    <div class="form-group">
-                        <label for="" class="required" >{{form.cpf.label}}</label>
-                        {% render_field form.cpf class="form-control" %}                       
-                    </div>     
-                </div>
+                        
         
                 <div class="col-sm-4">
                     <div class="form-group">
@@ -208,12 +205,14 @@
             </form>
         </div>
     </div>
+    <div class="content">
+        <nav id="menu">
+            <button class="button button1" id="tela1">Cadastro Pessoal</button>
+            <button class="button button1" id="tela2">Dados do Local de Trabalho </button>
+            <button class="button button1" id="tela3">Dados Bancários</button>
+        </nav>
+    </div>
 
-    <nav id="menu">
-        <button class="button button1" id="tela1">Cadastro Pessoal</button>
-        <button class="button button1" id="tela2">Dados do Local de Trabalho </button>
-        <button class="button button1" id="tela3">Dados Bancários</button>
-    </nav>
 
    <script>
     
