--- a/projeto/cliente/templates/cliente_form.html
+++ b/projeto/cliente/templates/cliente_form.html
@@ -84,13 +84,13 @@
                         {% render_field form.data_nasc class="form-control " type="date"%}                       
                     </div>
                 </div>
-                <div class="col-sm-4">                    
+                <div class="col-sm-5">                    
                     <div class="form-group" >                
                         <label for="" >{{form.nome_da_mae.label}} </label>        
                         {% render_field form.nome_da_mae class="form-control" %}
                     </div>
                 </div>
-                <div class="col-sm-4">                    
+                <div class="col-sm-5">                    
                     <div class="form-group" >                
                         <label for="" >{{form.nome_do_pai.label}} </label>        
                         {% render_field form.nome_do_pai class="form-control" %}
@@ -133,29 +133,28 @@
                 <div class="col-sm-2">                    
                     <div class="form-group" >                
                         <label for="" >{{form.contato1.label}} </label>        
-                        {% render_field form.contato1 class="form-control" %}
+                        {% render_field form.contato1 class="form-control phone-mask" placeholder="(__) ____-____" %}
                     </div>
                 </div>
                 <div class="col-sm-2">                    
                     <div class="form-group" >                
                         <label for="" >{{form.contato2.label}} </label>        
-                        {% render_field form.contato2 class="form-control" %}
+                        {% render_field form.contato2 class="form-control phone-mask" placeholder="(__) ____-____" %}
                     </div>
                 </div>
                 <div class="col-sm-2">                    
                     <div class="form-group" >                
                         <label for="" >{{form.celular1.label}} </label>        
-                        {% render_field form.celular1 class="form-control" %}
+                        {% render_field form.celular1 class="form-control cel-phone-mask" placeholder="(__) _____-____" %}
                     </div>
                 </div>
                 <div class="col-sm-2">                    
                     <div class="form-group" >                
                         <label for="" >{{form.celular2.label}} </label>        
-                        {% render_field form.celular2 class="form-control" %}
+                        {% render_field form.celular2 class="form-control cel-phone-mask" placeholder="(__) _____-____" %}
                     </div>
                 </div>
-            </div>    
-            
+            </div> 
         </div>
 
         <div class="f" id="tela2">
