--- a/projeto/cliente/templates/cliente_form.html
+++ b/projeto/cliente/templates/cliente_form.html
@@ -100,28 +100,28 @@
             </div> 
             <h2>Endereço</h2>
             <div class="row">
-                <div class="col-sm-4">                    
+                <div class="col-sm-5">                    
                     <div class="form-group" >                
                         <label for="" >{{form.rua.label}} </label>        
                         {% render_field form.rua class="form-control" %}
                     </div>
                 </div>
-                <div class="col-sm-2">                    
+                <div class="col-sm-1">                    
                     <div class="form-group" >                
                         <label for="" >{{form.numero_casa.label}} </label>        
                         {% render_field form.numero_casa class="form-control" %}
                     </div>
                 </div>
-                <div class="col-sm-3">                    
+                <div class="col-sm-4">                    
                     <div class="form-group" >                
                         <label for="" >{{form.bairro.label}} </label>        
                         {% render_field form.bairro class="form-control" %}
                     </div>
                 </div>
-                <div class="col-sm-3">                    
+                <div class="col-sm-2">                    
                     <div class="form-group" >                
                         <label for="" >{{form.cep.label}} </label>        
-                        {% render_field form.cep class="form-control" %}
+                        {% render_field form.cep class="form-control cep-mask" placeholder="__.___-___" %}
                     </div>
                 </div>
                 <div class="col-sm-4">                    
