--- a/projeto/core/templates/base.html
+++ b/projeto/core/templates/base.html
@@ -53,6 +53,7 @@
     <script type="text/javascript" src="{% static 'bootstrap/js/masks.js' %}"></script>
     <script type="text/javascript" src="{% static 'bootstrap/js/jquery.mask.min.js' %}"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script> 
+    <script src="https://raw.githubusercontent.com/igorescobar/jQuery-Mask-Plugin/master/src/jquery.mask.js"></script>
 
     
     {% block js %}{% endblock js %}
